test/errors/source.js
throw new Error('source.js');